# remote-send

./: Cargo.toml  README.md  config.toml
src/: cli.rs  config.rs  main.rs  s3_action.rs
